--- a/style.css
+++ b/style.css
@@ -22,7 +22,11 @@ h1{
     height: 90%;
     margin-bottom: 20px;
 
-
+}
+.two{
+    margin-left: 20%;
+    margin-bottom: 10%;
+    
 }
 
 .top-banner{
@@ -92,3 +96,8 @@ footer p{
     text-align: center;
     font-size: 12px;
 }
+.third{
+    background-image: url(images/footer-bg.png);
+    background-size: 100% 100%;
+}
+    
