--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@ p{
     margin-left: 32%;
     margin-top: 3%;
 } 
+.third{
+    background-image: url(images/footer-bg.png);
+    background-size: 100% 100%;
+}
+
 footer p{
     text-align: center;
     font-size: 12px;
